Compilers construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/049_shadowing_decl_return_more.xi
f(x:int) : int
f(x:int) : int, int

//@PRACOWNIA
//@should_not_typecheck
